Added new swagger implementation 3.9.0

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,6 +42,8 @@ window.onload = function() {
     url: "/api/swagger.json",
     validatorUrl: null,
     dom_id: '#swagger-ui',
+    tagsSorter: "alpha",
+    operationsSorter: "alpha",
     presets: [
       SwaggerUIBundle.presets.apis,
       SwaggerUIStandalonePreset
